# Squeeze

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  main.cpp
.github/workflows/: ci.yml  release.yml
include/squeeze/: append_scheduler.h  appender.h  common.h  compression_method.h  decode.h  decoder.h  encode.h  encoder.h  encoder_pool.h  entry.h  entry_common.h  entry_header.h  entry_input.h  entry_iterator.h  entry_output.h  error.h  exception.h  extracter.h  lister.h  logging.h  printing.h  reader.h  reader_iterator.h  remover.h  squeeze.h  status.h  version.h  writer.h
include/squeeze/compression/: compression.h  config.h  deflate.h  deflate_huffman.h  deflate_lz77.h  deflate_params.h  deflate_policy.h  error.h  huffman.h  huffman_15.h  huffman_package_merge.h  huffman_policy.h  huffman_tree.h  lz77.h  lz77_params.h  lz77_policy.h  lz77_sliding_window.h  lz77_token.h  method.h  params.h
include/squeeze/misc/: bitcoder.h  bitstream.h  circular_iterator.h  cpu_info.h  sequence.h  singleton.h  substream.h  task_scheduler.h  thread_pool.h  thread_safe_queue.h
include/squeeze/utils/: defer.h  defer_macros.h  endian.h  enum.h  fs.h  io.h  iterator.h  iterator_concepts.h  overloaded.h  stringify.h
include/squeeze/wrap/: file_appender.h  file_extracter.h  file_remover.h  file_squeeze.h
src/: CMakeLists.txt  append_scheduler.cpp  appender.cpp  decode.cpp  decoder.cpp  encode.cpp  encoder.cpp  encoder_pool.cpp  entry.cpp  entry_common.cpp  entry_header.cpp  entry_input.cpp  entry_iterator.cpp  entry_output.cpp  extracter.cpp  lister.cpp  reader.cpp  reader_iterator.cpp  remover.cpp  squeeze.cpp  writer.cpp  writer_internal.h
src/compression/: deflate_huffman.cpp  huffman.cpp
src/misc/: cpu_info.cpp  substream.cpp  thread_pool.cpp  thread_safe_queue.cpp
src/utils/: fs.cpp  io.cpp
src/wrap/: file_appender.cpp  file_extracter.cpp  file_remover.cpp  file_squeeze.cpp
test/: CMakeLists.txt  encode_decode.cpp  entry_header.cpp  main.cpp  squeeze.cpp
test/compression/: deflate.cpp  deflate_huffman.cpp  huffman.cpp  huffman_15.cpp  lz77.cpp
test/test_common/: print_to.h  test_data.cpp  test_data.h  test_on_data_input.cpp  test_on_data_input.h
test/test_common/data/: data_seed.txt
test/test_tools/: CMakeLists.txt  generate_mock_contents.cpp  generate_mock_contents.h  generate_mockfs.cpp  generate_mockfs.h  mock_entry_input.cpp  mock_entry_input.h  mock_entry_output.cpp  mock_entry_output.h  mockfs.cpp  mockfs.h  random.cpp  random.h
test/test_tools/include/test_tools/: printing.h
test/test_tools/include/test_tools/generators/: data_gen.h  mockfs_gen.h  prng.h  test_gen.h
test/test_tools/include/test_tools/mock/: entry_input.h  entry_output.h  fs.h
test/test_tools/src/: CMakeLists.txt  printing.cpp
test/test_tools/src/generators/: data_gen.cpp  mockfs_gen.cpp
test/test_tools/src/mock/: entry_input.cpp  entry_output.cpp  fs.cpp
tools/: CMakeLists.txt  sqz.cpp
tools/utils/: argparser.h
